Table city {
  id int [pk, increment]
  name varchar(255) [not null]
  population int [not null]
  region varchar(255)
  city_config_id int [ref: > city_configs.id, null] // Reference to city_configs
}

Table location_types {
  id int [pk, increment]
  name varchar(255) [not null] // Name of the location type (e.g., "Residential", "Commercial")
  max_capacity int [not null] // Maximum capacity for inhabitants or usage
  used_capacity int [default: 0] // Current used capacity
  rent float // Rent for companies operating in this location type
  maintenance_cost float // Cost of maintaining this location type
  description text // Detailed description of the location type
}

Table location {
  id int [pk, increment]
  name varchar(255) [not null] // Name of the location (e.g., "Node A", "Intersection 1")
  city_id int [not null, ref: > city.id] // The city this location belongs to
  location_type_id int [not null, ref: > location_types.id] // The type of this location
}

Table street {
  id int [pk, increment]
  name varchar(255) [not null]
  city_id int [not null, ref: > city.id]
  start_location_id int [not null, ref: > location.id] // Starting location of the street
  end_location_id int [not null, ref: > location.id] // Ending location of the street
  length float
}

Table company {
  id int [pk, increment]
  name varchar(255) [not null]
  sector varchar(255) [not null]
  value float [default: 0]
}

Table employee {
  id int [pk, increment]
  name varchar(255) [not null]
  position varchar(255) [not null]
  salary float [not null]
  company_id int [not null, ref: > company.id]
}

Table customer {
  id int [pk, increment]
  name varchar(255) [not null]
  email varchar(255) [unique]
  phone varchar(255)
  city_id int [not null, ref: > city.id]
}

Table sale {
  id int [pk, increment]
  date datetime [default: `CURRENT_TIMESTAMP`]
  amount float [not null]
  company_id int [not null, ref: > company.id]
  customer_id int [not null, ref: > customer.id]
}

Table vehicle {
  id int [pk, increment]
  model varchar(255) [not null]
  type enum('motorcycle', 'car', 'truck') [not null]
  capacity float [not null] // Load capacity in kg
  company_id int [not null, ref: > company.id]
  driver_id int [ref: > employee.id, null] // Relation to the employee who drives the vehicle
}

Table city_configs {
  id int [pk, increment]
  difficulty_level enum('easy', 'medium', 'hard') [not null] // Difficulty level for city generation
  residential_rate float [not null, default: 0.7] // Rate of residential locations
  commercial_rate float [not null, default: 0.3] // Rate of commercial locations
  max_population int [not null] // Maximum population allowed in the city
  max_locations int [not null] // Maximum number of locations allowed in the city
  max_companies int [not null] // Maximum number of companies allowed in the city
  description text // Additional details about the configuration
}